# ni-fcc-growth-modelling

./: Cargo.toml  README.md  SMCastep_Extension.xms
SiNx_am/: SMCastep_Extension_SiNx_am.xms  SiNx_am.cell  SiNx_am.param  SiNx_am.trjaux  SiNx_am.xsd  SiNx_am_DOS.cell  SiNx_am_DOS.kptaux  SiNx_am_DOS.param
src/: main.rs
src/combiner/: mod.rs
