[package]
name = "ni-fcc-growth-modelling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemrust-core = {path = "../chemrust/chemrust-core"}
chemrust-parser = {path = "../chemrust/chemrust-parser"}
chemrust-formats = {path = "../chemrust/chemrust-formats"}
chemrust-misctools = {path =  "../chemrust/chemrust-misctools"}
nalgebra = "0.32.*"
glob = "0.3.1"
